# agentichost

./: .env  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/streamlit_brdtosrs/: aritra_streamlit.py  crew.py  main.py  streamlit.py
src/streamlit_brdtosrs/config/: agents.yaml  tasks.yaml
src/streamlit_brdtosrs/output1/: SRS_Healthcare_Provider_App.docx  article.md  healthcare_application_srs.docx  srs1.md
src/streamlit_brdtosrs/output2/: SRS_Healthcare_Appointment_Management.docx  article.md  srs1.md
src/streamlit_brdtosrs/output3/: SRS_Healthcare_Appointment_Scheduling.docx  srs1.md
src/streamlit_brdtosrs/output4/: SRS_Healthcare_App.docx  srs1.md
src/streamlit_brdtosrs/output5/: SRS_Healthcare_Appointment_Scheduling.docx  article.txt  srs1.md
src/streamlit_brdtosrs/output6_aritra/: SRS_Healthcare_Appointment_System.docx  srs1.md
src/streamlit_brdtosrs/output7/: SRS_HealthcareApp.docx  article.txt  srs1.md
